force-app/main/default/objects/SPEN_PSRVulnerabilityType__c/SPEN_PSRVulnerabilityType__c.object-meta.xml
<CustomObject>
    <description>PSR Type/Vulnerability Type object has been set up to store master data</description>
    <label>PSR and Vulnerability Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSR and Vulnerability Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>