force-app/main/default/objects/SPEN_PSRVulnerabilityType__c/fields/SPEN_Code__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Code__c</fullName>
    <externalId>true</externalId>
    <label>Code</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>