force-app/main/default/objects/SPEN_PSRVulnerabilityType__c/fields/SPEN_Description__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Description__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>