force-app/main/default/objects/SPEN_PSRVulnerabilityType__c/fields/SPEN_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ExternalId__c</fullName>
    <label>[TO BE DELETED] External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>