force-app/main/default/objects/SPEN_PSRVulnerabilityType__c/fields/SPEN_Priority__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority</label>
    <type>Checkbox</type>
</CustomField>