force-app/main/default/objects/SPEN_PSRVulnerabilityType__c/fields/SPEN_SpecificVulnerability__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SpecificVulnerability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specific Vulnerability</label>
    <type>Checkbox</type>
</CustomField>