force-app/main/default/objects/SPEN_PSRVulnerabilityType__c/recordTypes/SPEN_PSRVulnerabilityType.recordType-meta.xml
<RecordType>
    <fullName>SPEN_PSRVulnerabilityType</fullName>
    <active>true</active>
    <label>PSR</label>
</RecordType>