force-app/main/default/objects/SPEN_PSRVulnerabilityType__c/recordTypes/SPEN_Vulnerability.recordType-meta.xml
<RecordType>
    <fullName>SPEN_Vulnerability</fullName>
    <active>true</active>
    <label>Vulnerability</label>
</RecordType>