force-app/main/default/objects/SPEN_PSRVulnerabilityType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Code__c</columns>
    <columns>SPEN_Description__c</columns>
    <columns>SPEN_Active__c</columns>
    <columns>SPEN_SpecificVulnerability__c</columns>
    <columns>SPEN_Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>